Added option for storing sessions in DB

--- a/samples/java/play-authenticate-usage/conf/play-authenticate/mine.conf
+++ b/samples/java/play-authenticate-usage/conf/play-authenticate/mine.conf
@@ -22,6 +22,12 @@ play-authenticate {
         useForwardIp = false
         forwardIpHeader = "X-Forwarded-For"
 
+        # if true, session will be stored in DB as well
+        dbStorage = true
+
+        # clear terminated DB sessions, if clearFrequency bigger than 0 it will use Akka scheduler for the task, with frequency: n seconds
+        clearOnStart = true
+        clearFrequency = 600
     }
     
     # Settings for the password-based authentication provider
